--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Il mio Viaggio a Londra</title>
 </head>
 <body>
-    
+
+    <header>
+        <h1>Il mio Viaggio a Londra</h1>
+        <img src="./asset/img/london-1.jpg" alt="first image of London's landscape">
+        <img src="./asset/img/london-2.jpg" alt="second image of London's landscape">
+        <img src="./asset/img/london-3.jpg" alt="third image of London's landscape">
+    </header>
+
+    <main>
+        
+    </main>
+
 </body>
 </html>
