wrote 1st section with h2 and table

--- a/index.html
+++ b/index.html
@@ -8,15 +8,57 @@
 </head>
 <body>
 
+    <!-- header -->
     <header>
         <h1>Il mio Viaggio a Londra</h1>
         <img src="./asset/img/london-1.jpg" alt="first image of London's landscape">
         <img src="./asset/img/london-2.jpg" alt="second image of London's landscape">
         <img src="./asset/img/london-3.jpg" alt="third image of London's landscape">
+        <hr>
     </header>
 
     <main>
+
+        <!-- "Le mie spese" section -->
+        <section>
+            <h2>Le mie spese</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360€</td>
+                    </tr>
+                </tfoot>
+            </table>
+            <hr>
+        </section>
         
+
     </main>
 
 </body>
