--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
             <hr>
         </section>
         
+        <!-- "Cose da fare" section -->
+        <section>
+            <h3>Cose da fare</h3>
+            <ul>
+                <li>Visitare la Tower of London <b>&#10007;</b></li>
+                <li>Visitare Greenwich <b></b>&check;</b></li>
+                <li>Ascoltare un artista di strada a Covent Garden <b></b>&check;</b></li>
+                <li>Mangiare il tipico Fish and Chips inglese <b></b>&#10007;</b></li>
+            </ul>
+            <hr>
+        </section>
 
     </main>
 
