--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <!-- "Le mie spese" section -->
         <section>
             <h2>Le mie spese</h2>
+
+            <!-- table stars here -->
             <table>
                 <thead>
                     <tr>
@@ -55,6 +57,8 @@
                     </tr>
                 </tfoot>
             </table>
+            <!-- table end here -->
+
             <hr>
         </section>
         
@@ -63,9 +67,9 @@
             <h3>Cose da fare</h3>
             <ul>
                 <li>Visitare la Tower of London <b>&#10007;</b></li>
-                <li>Visitare Greenwich <b></b>&check;</b></li>
-                <li>Ascoltare un artista di strada a Covent Garden <b></b>&check;</b></li>
-                <li>Mangiare il tipico Fish and Chips inglese <b></b>&#10007;</b></li>
+                <li>Visitare Greenwich <b>&check;</b></li>
+                <li>Ascoltare un artista di strada a Covent Garden <b>&check;</b></li>
+                <li>Mangiare il tipico Fish and Chips inglese <b>&#10007;</b></li>
             </ul>
             <hr>
         </section>
@@ -95,6 +99,13 @@
                 </li>
             </ol>
             <hr>
+        </section>
+
+        <!-- "Le foto" section -->
+        <section>
+            <h3>Le foto</h3>
+            <img src="./asset/img/london-4.jpg" alt="a stunning view of London">
+            <img src="./asset/img/london-5.jpg" alt="Covent Garden">
         </section>
 
     </main>
